[ADD] Archivo terminado

--- a/TestOvercome/app/src/main/AndroidManifest.xml
+++ b/TestOvercome/app/src/main/AndroidManifest.xml
@@ -14,10 +14,21 @@
         android:theme="@style/Theme.TestOvercome"
         tools:targetApi="31">
         <activity
+            android:name=".ticketarchivados.view.ticketsArchivados"
+            android:exported="false" />
+        <activity
+            android:name=".detailticket.view.detailTicket"
+            android:exported="false" />
+        <activity
+            android:name=".addticket.view.addTicket"
+            android:exported="false" />
+        <activity
             android:name=".main.view.MainActivity"
-            android:exported="true">
+            android:exported="true"
+            android:screenOrientation="portrait">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
+
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
